# SPDX-FileCopyrightText: 2026 Alexander R. Croft
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "rally"
version = "5.0.0"
edition = "2024"
description = "Rally your services with an embedded development dashboard"
license = "GPL-3.0-or-later"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
ratatouille = "0.1.0"
notify = "8.0"
clap = { version = "4.5", features = ["derive"] }
