# SPDX-FileCopyrightText: 2026 Alexander R. Croft
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "frogfish-rally"
version = "1.0.1"
edition = "2024"
rust-version = "1.85"
description = "Rally your services with an embedded development dashboard"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/frogfishio/start"
homepage = "https://github.com/frogfishio/start"
keywords = ["process-manager", "supervisor", "dashboard", "devtools", "watcher"]
categories = ["command-line-utilities", "development-tools"]
include = [
	"src/**/*",
	"Cargo.toml",
	"Cargo.lock",
	"README.md",
	"LICENSE",
	"VERSION",
	"BUILD",
	"build.rs",
	"rally.toml.example",
	"USER_GUIDE.md",
]

[[bin]]
name = "rally"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
ratatouille = "0.1.0"
notify = "8.0"
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
